@@ -36,14 +36,17 @@
 
 #include <string>
 
+struct AVFormatContext;
+
 /**
  * @brief Get number of titles in cue sheet
  * @param[in] filename - Path to check
  * @param[in, out] buf - The buffer passed to the readdir() operation.
  * @param[in, out] filler - Function to add an entry in a readdir() operation (see https://libfuse.github.io/doxygen/fuse_8h.html#a7dd132de66a5cc2add2a4eff5d435660)
+ * @param[in] fmt_ctx - Format context of file, may be nullptr
  * @note buf and filler can be nullptr. In that case the call will run faster, so these parameters should only be passed if to be filled in.
  * @return -errno or number or titles in cue sheet
  */
-int check_cuesheet(const std::string & filename, void *buf = nullptr, fuse_fill_dir_t filler = nullptr);
+int check_cuesheet(const std::string & filename, void *buf = nullptr, fuse_fill_dir_t filler = nullptr, AVFormatContext *fmt_ctx = nullptr);
 
 #endif // CUESHEETPARSER_H
